Fix some grammar. Fix paddings on small screens.

--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,10 @@ a {
     text-decoration: none;
 }
 
+.lc a {
+    text-decoration: underline;
+}
+
 a:visited {
     color: inherit;
 }
@@ -106,7 +110,7 @@ a:visited {
     max-width: 1120px;
     width: 100%;
     justify-content: center;
-    padding: 30px 20px 30px 20px;
+    padding: 45px 20px;
 }
 
 .btn {
@@ -197,6 +201,7 @@ a:visited {
 
 .hero {
     justify-content: space-between;
+    padding-bottom: 75px;
 }
 
 .hero-logo {
@@ -300,7 +305,7 @@ a:visited {
 .demo {
     width: 230px;
     height: 400px;
-    padding: 20px 20px;
+    padding: 25px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -338,7 +343,7 @@ a:visited {
 .demo-button {
     display: flex;
     width: 150px;
-    height: 40px;
+    height: 45px;
     color: #FFFFFF;
     font-family: var(--font-family-aeonik-medium);
     font-size: var(--font-size-l);
